--- a/index.html
+++ b/index.html
@@ -17,9 +17,35 @@
                 <a href="#newsletter">Newsletter</a>
             </div>
         </div>
-        <button onclick="location.href='story.html'">Historia</button>
-        <button onclick="location.href='#plantilla'">Plantilla</button>
-        <button onclick="location.href='#aficion'">Afición</button>
+        <div class="dropdown">
+            <button class="dropbtn">Historia</button>
+            <div class="dropdown-content">
+                <a href="story.html#inicios">1. Los Inicios (1903 - 1939)</a>
+                <a href="story.html#aviacion">2. Atlético Aviación (1939 - 1950)</a>
+                <a href="story.html#años-dorados">3. Años Dorados (1950 - 1970)</a>
+                <a href="story.html#campeones-europa">4. Campeones de Europa (1970 - 1990)</a>
+                <a href="story.html#doblete">5. Del Doblete al Descenso (1990 - 2000)</a>
+                <a href="story.html#resurreccion">6. Resurrección y Títulos Europeos (2000 - 2010)</a>
+                <a href="story.html#era-simeone">7. La Era Simeone (2010 - Hoy)</a>
+            </div>
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn">Plantilla</button>
+            <div class="dropdown-content">
+                <a href="squad.html#porteros">Porteros</a>
+                <a href="squad.html#defensores">Defensores</a>
+                <a href="squad.html#centrocampistas">Centrocampistas</a>
+                <a href="squad.html#delanteros">Delanteros</a>
+                <a href="squad.html#cuerpo-tecnico">Cuerpo Técnico</a>
+            </div>
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn">Afición</button>
+            <div class="dropdown-content">
+                <a href="fans.html#himnos">Himnos</a>
+                <a href="fans.html#social">Social</a>
+            </div>
+        </div>
     </div>
     <div class="title-container">
         <h1>Historia del Atlético de Madrid</h1>
