--- a/squad.html
+++ b/squad.html
@@ -39,7 +39,13 @@
                 <a href="#cuerpo-tecnico">Cuerpo Técnico</a>
             </div>
         </div>
-        <button onclick="location.href='index.html#aficion'">Afición</button>
+        <div class="dropdown">
+            <button class="dropbtn">Afición</button>
+            <div class="dropdown-content">
+                <a href="fans.html#himnos">Himnos</a>
+                <a href="fans.html#social">Social</a>
+            </div>
+        </div>
     </div>
     <div class="title-container">
         <h1>Plantilla del Atlético de Madrid</h1>
