--- a/story.html
+++ b/story.html
@@ -29,8 +29,23 @@
                 <a href="#era-simeone">7. La Era Simeone (2010 - Hoy)</a>
             </div>
         </div>
-        <button onclick="location.href='index.html#plantilla'">Plantilla</button>
-        <button onclick="location.href='index.html#aficion'">Afición</button>
+        <div class="dropdown">
+            <button class="dropbtn">Plantilla</button>
+            <div class="dropdown-content">
+                <a href="squad.html#porteros">Porteros</a>
+                <a href="squad.html#defensores">Defensores</a>
+                <a href="squad.html#centrocampistas">Centrocampistas</a>
+                <a href="squad.html#delanteros">Delanteros</a>
+                <a href="squad.html#cuerpo-tecnico">Cuerpo Técnico</a>
+            </div>
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn">Afición</button>
+            <div class="dropdown-content">
+                <a href="fans.html#himnos">Himnos</a>
+                <a href="fans.html#social">Social</a>
+            </div>
+        </div>
     </div>
     <div class="title-container">
         <h1>Historia del Atlético de Madrid</h1>
