--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <div class="dropdown-content">
                 <a href="#inicio">Inicio</a>
                 <a href="#actualidad">Actualidad</a>
+                <a href="#clasificacion">Clasificación</a>
                 <a href="#estadio">Estadio</a>
                 <a href="#newsletter">Newsletter</a>
             </div>
