--- a/fans.html
+++ b/fans.html
@@ -78,15 +78,16 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/OyGFylF0yhA?si=FWmgi9UG_zECESva" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <h3>Navidad 2023</h3>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/KDGESBPKImw?si=6j1v-O1OVaScJcKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <p>Sigue al club en sus redes sociales para estar al tanto de las últimas noticias y novedades:</p>
+    </div>
 
+    <div id="rrss" class="social-icons">
         <h3>Twitter</h3>
         <a href="https://twitter.com/atleti" target="_blank"><img src="/images/tw.png" alt="Twitter Atlético de Madrid"></a>
         
         <h3>Instagram</h3>
         <a href="https://www.instagram.com/atleticodemadrid/" target="_blank"><img src="/images/instagram.png" alt="Instagram Atlético de Madrid"></a>
 
-
+    </div>
 
     <footer>
         <p>© 2025 Andrés Sánchez de Ágreda 3ºA GITT</p>
