--- a/index.html
+++ b/index.html
@@ -47,11 +47,29 @@
                 <a href="fans.html#social">Social</a>
             </div>
         </div>
+        <div class="dropdown">
+            <button class="dropbtn">Tienda</button>
+            <div class="dropdown-content">
+                <a href="store.html">Temporada Actual</a>
+                <a href="retro.html">Retro</a>
+            </div>
+
+        </div>
     </div>
     <div class="title-container">
         <h1>Historia del Atlético de Madrid</h1>
         <h2>La lealtad es algo que sale del alma</h2>
     </div>
+
+    <div class="ad-container ad-left" id="ad-left">
+        Cargando anuncio...
+    </div>
+
+    <div class="ad-container ad-right" id="ad-right">
+        Cargando anuncio...
+    </div>
+
+    <script src="ads.js"></script>
     
     <div id="actualidad" class="section">
         <h2>Actualidad</h2>
