--- a/fans.html
+++ b/fans.html
@@ -46,11 +46,41 @@
                 <a href="#social">Social</a>
             </div>
         </div>
+        <div class="dropdown">
+            <button class="dropbtn">Estadísticas</button>
+            <div class="dropdown-content">
+                <a href="stats.html#actual">Temporada Actual</a>
+                <a href="stats.html#anterior">Anteriores</a>
+            </div>
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn">Tienda</button>
+            <div class="dropdown-content">
+                <a href="store.html">Articulos relacionados</a>
+            </div>
+
+        </div>
     </div>
     <div class="title-container">
         <h1>Afición</h1>
         <h2>Un club de lucha y sacrificio requiere una afición a la altura</h2>
     </div>
+
+    <div class="ad-container ad-left" id="ad-left">
+        <img src="" alt="Anuncio" id="thumbnailL">
+        <a id="CargandoL">Cargando anuncio...</a>
+        <p id="titleL">Cargando título</p>
+        <a id="linkL" href="purchase.html">¡Cómpralo ya!</a>
+    </div>
+
+    <div class="ad-container ad-right" id="ad-right">
+        <img src="" alt="Anuncio" id="thumbnailR">
+        <a id="CargandoR">Cargando anuncio...</a>
+        <p id="titleR">Cargando título</p>
+        <a id="linkR" href="purchase.html">¡Cómpralo ya!</a>
+    </div>
+
+    <script src="ads.js"></script>
 
     <div id="himnos" class="section">
         <h2>Himnos</h2>
