--- a/index.html
+++ b/index.html
@@ -48,10 +48,16 @@
             </div>
         </div>
         <div class="dropdown">
+            <button class="dropbtn">Estadísticas</button>
+            <div class="dropdown-content">
+                <a href="stats.html#actual">Temporada Actual</a>
+                <a href="stats.html#anterior">Anteriores</a>
+            </div>
+        </div>
+        <div class="dropdown">
             <button class="dropbtn">Tienda</button>
             <div class="dropdown-content">
-                <a href="store.html">Temporada Actual</a>
-                <a href="retro.html">Retro</a>
+                <a href="store.html">Articulos relacionados</a>
             </div>
 
         </div>
@@ -62,11 +68,17 @@
     </div>
 
     <div class="ad-container ad-left" id="ad-left">
-        Cargando anuncio...
+        <img src="" alt="Anuncio" id="thumbnailL">
+        <a id="CargandoL">Cargando anuncio...</a>
+        <p id="titleL">Cargando título</p>
+        <a id="linkL" href="purchase.html">¡Cómpralo ya!</a>
     </div>
 
     <div class="ad-container ad-right" id="ad-right">
-        Cargando anuncio...
+        <img src="" alt="Anuncio" id="thumbnailR">
+        <a id="CargandoR">Cargando anuncio...</a>
+        <p id="titleR">Cargando título</p>
+        <a id="linkR" href="purchase.html">¡Cómpralo ya!</a>
     </div>
 
     <script src="ads.js"></script>
