--- a/story.html
+++ b/story.html
@@ -46,11 +46,36 @@
                 <a href="fans.html#social">Social</a>
             </div>
         </div>
+        <div class="dropdown">
+            <button class="dropbtn">Estadísticas</button>
+            <div class="dropdown-content">
+                <a href="stats.html#actual">Temporada Actual</a>
+                <a href="stats.html#anterior">Anteriores</a>
+            </div>
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn">Tienda</button>
+            <div class="dropdown-content">
+                <a href="store.html">Articulos relacionados</a>
+            </div>
+
+        </div>
     </div>
-    <div class="title-container">
-        <h1>Historia del Atlético de Madrid</h1>
-        <h2>Un club de lucha y sacrificio</h2>
+    <div class="ad-container ad-left" id="ad-left">
+        <img src="" alt="Anuncio" id="thumbnailL">
+        <a id="CargandoL">Cargando anuncio...</a>
+        <p id="titleL">Cargando título</p>
+        <a id="linkL" href="purchase.html">¡Cómpralo ya!</a>
     </div>
+
+    <div class="ad-container ad-right" id="ad-right">
+        <img src="" alt="Anuncio" id="thumbnailR">
+        <a id="CargandoR">Cargando anuncio...</a>
+        <p id="titleR">Cargando título</p>
+        <a id="linkR" href="purchase.html">¡Cómpralo ya!</a>
+    </div>
+
+    <script src="ads.js"></script>
 
     <div id="inicios" class="section">
         <h2>1. Los Inicios (1903 - 1939)</h2>
