BugFixing Ads y Stats

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <div class="dropdown">
             <button class="dropbtn">Estadísticas</button>
             <div class="dropdown-content">
-                <a href="stats.html#actual">Temporada Actual</a>
-                <a href="stats.html#anterior">Anteriores</a>
+                <a href="stats.html#Actual">Temporada Actual</a>
+                <a href="stats.html#2021">Anteriores</a>
             </div>
         </div>
         <div class="dropdown">
