--- a/store.html
+++ b/store.html
@@ -50,8 +50,8 @@
         <div class="dropdown">
             <button class="dropbtn">Estadísticas</button>
             <div class="dropdown-content">
-                <a href="stats.html#actual">Temporada Actual</a>
-                <a href="stats.html#anterior">Anteriores</a>
+                <a href="stats.html#Actual">Temporada Actual</a>
+                <a href="stats.html#2021">Anteriores</a>
             </div>
         </div>
         <div class="dropdown">
@@ -68,7 +68,7 @@
     </div>
 
     <div id="tienda" class="section">
-        
+        <h1>!Estamos en proceso!</h1>
     </div>
 
     <script src="store.js"></script>
