--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
             <button class="dropbtn">Estadísticas</button>
             <div class="dropdown-content">
                 <a href="stats.html#Actual">Temporada Actual</a>
-                <a href="stats.html#2021">Anteriores</a>
+                <a href="stats.html#2021">2021</a>
+                <a href="stats.html#2022">2022</a>
+                <a href="stats.html#2023">2023</a>
             </div>
         </div>
         <div class="dropdown">
@@ -81,7 +83,7 @@
         <a id="linkR" href="purchase.html">¡Cómpralo ya!</a>
     </div>
 
-    <script src="ads.js"></script>
+    <script src="scripts.js"></script>
     
     <div id="actualidad" class="section">
         <h2>Actualidad</h2>
