--- a/stats.html
+++ b/stats.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Historia del Atlético de Madrid</title>
-    <link rel="stylesheet" href="stylestats.css">
+    <link rel="stylesheet" href="styleindex.css">
 </head>
 <body>
     <div class="nav">
@@ -51,7 +51,9 @@
             <button class="dropbtn">Estadísticas</button>
             <div class="dropdown-content">
                 <a href="#Actual">Temporada Actual</a>
-                <a href="#2021">Anteriores</a>
+                <a href="#2021">2021</a>
+                <a href="#2022">2022</a>
+                <a href="#2023">2023</a>
             </div>
         </div>
         <div class="dropdown">
@@ -80,8 +82,7 @@
         <p id="titleR">Cargando título</p>
         <a id="linkR" href="purchase.html">¡Cómpralo ya!</a>
     </div>
-
-    <script src="ads.js"></script>
+    
     <div id="Actual" class="section">
         <h2>Estadísticas de La Liga 2024</h2>
 
@@ -95,16 +96,34 @@
         <h2>Estadísticas de La Liga 2021</h2>
 
         <h3>Clasificación</h3>
-        <table id="standings-table" border="1">
+        <table id="standings-table-2021" border="1">
             <tr><th>Pos</th><th>Equipo</th><th>Puntos</th><th>GF</th><th>GC</th></tr>
         </table>
 
+    </div>
+
+    <div id="2022" class="section">
+        <h2>Estadísticas de La Liga 2022</h2>
+
+        <h3>Clasificación</h3>
+        <table id="standings-table-2022" border="1">
+            <tr><th>Pos</th><th>Equipo</th><th>Puntos</th><th>GF</th><th>GC</th></tr>
+        </table>
+    </div>
+
+    <div id="2023" class="section">
+        <h2>Estadísticas de La Liga 2023</h2>
+
+        <h3>Clasificación</h3>
+        <table id="standings-table-2023" border="1">
+            <tr><th>Pos</th><th>Equipo</th><th>Puntos</th><th>GF</th><th>GC</th></tr>
+        </table>
     </div>
 
     <footer>
         <p>© 2025 Andrés Sánchez de Ágreda 3ºA GITT</p>
     </footer>
 
-    <script src="stats.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
