--- a/story.html
+++ b/story.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Historia del Atlético de Madrid</title>
-    <link rel="stylesheet" href="stylestory.css">
+    <link rel="stylesheet" href="styleindex.css">
 </head>
 <body>
     <div class="nav">
@@ -50,7 +50,9 @@
             <button class="dropbtn">Estadísticas</button>
             <div class="dropdown-content">
                 <a href="stats.html#Actual">Temporada Actual</a>
-                <a href="stats.html#2021">Anteriores</a>
+                <a href="stats.html#2021">2021</a>
+                <a href="stats.html#2022">2022</a>
+                <a href="stats.html#2023">2023</a>
             </div>
         </div>
         <div class="dropdown">
@@ -75,7 +77,7 @@
         <a id="linkR" href="purchase.html">¡Cómpralo ya!</a>
     </div>
 
-    <script src="ads.js"></script>
+    <script src="scripts.js"></script>
 
     <div id="inicios" class="section">
         <h2>1. Los Inicios (1903 - 1939)</h2>
