--- a/stats.html
+++ b/stats.html
@@ -82,6 +82,18 @@
         <p id="titleR">Cargando título</p>
         <a id="linkR" href="purchase.html">¡Cómpralo ya!</a>
     </div>
+
+    <div id="goleadores" class="section">
+        <h2>🧨 Máximos Goleadores (API propia)</h2>
+        <table id="tabla-goleadores" border="1">
+            <tr>
+                <th>Nombre</th>
+                <th>Goles</th>
+                <th>Posición</th>
+            </tr>
+        </table>
+    </div>
+    
     
     <div id="Actual" class="section">
         <h2>Estadísticas de La Liga 2024</h2>
