--- a/stats.html
+++ b/stats.html
@@ -50,6 +50,7 @@
         <div class="dropdown">
             <button class="dropbtn">Estadísticas</button>
             <div class="dropdown-content">
+                <a href="#goleadores">Goleadores</a>
                 <a href="#Actual">Temporada Actual</a>
                 <a href="#2021">2021</a>
                 <a href="#2022">2022</a>
@@ -84,7 +85,7 @@
     </div>
 
     <div id="goleadores" class="section">
-        <h2>🧨 Máximos Goleadores (API propia)</h2>
+        <h2>Máximos Goleadores de la Temporada</h2>
         <table id="tabla-goleadores" border="1">
             <tr>
                 <th>Nombre</th>
