--- a/store.html
+++ b/store.html
@@ -50,6 +50,7 @@
         <div class="dropdown">
             <button class="dropbtn">Estadísticas</button>
             <div class="dropdown-content">
+                <a href="stats.html#goleadores">Goleadores</a>
                 <a href="stats.html#Actual">Temporada Actual</a>
                 <a href="stats.html#2021">2021</a>
                 <a href="stats.html#2022">2022</a>
